--- a/src/memray/reporters/templates/lel.html
+++ b/src/memray/reporters/templates/lel.html
@@ -1,5 +1,30 @@
 {% extends "base2.html" %}
 
+{% block topbar_buttons %}
+<div class="dropdown" id="threadsDropdown" hidden>
+  <button class="btn btn-outline-light dropdown-toggle mr-3" type="button" id="threadsDropdownButton" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" data-toggle-second="tooltip" data-placement="right"
+          title="Display only the selected thread">
+    Filter Thread
+  </button>
+  <div class="dropdown-menu" aria-labelledby="threadsDropdownButton" id="threadsDropdownList">
+    <a class="dropdown-item" data-thread="-0x1" id="resetThreadFilterItem">Reset</a>
+  </div>
+</div>
+<div class="form-check mr-3">
+  <input class="form-check-input" type="checkbox" data-toggle="tooltip" id="hideUninteresting"
+          title="Hide CPython eval frames and other, memray-related frames" checked>
+    <label class="form-check-label text-white bg-dark">Hide Irrelevant Frames</label>
+</div>
+<div class="form-check mr-3">
+  <input class="form-check-input" type="checkbox" data-toggle="tooltip" id="hideImportSystem"
+          title="Hide frames related to the Python import system" >
+    <label class="form-check-label text-white bg-dark">Hide Import System Frames</label>
+</div>
+<button id="resetZoomButton" class="btn btn-outline-light mr-3">Reset Zoom</button>
+<button id="invertButton" class="btn btn-outline-light mr-3">Invert</button>
+{% endblock %}
+
 {% block content %}
 <div id="overlay" style="display: none;"></div>
 <div class="chart-container">
