fixup! fixup! lel

--- a/src/memray/reporters/templates/lel.html
+++ b/src/memray/reporters/templates/lel.html
@@ -79,7 +79,7 @@
 <script src="https://cdn.jsdelivr.net/npm/d3-tip@0.9.1/dist/index.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/d3-flame-graph@4.0.6/dist/d3-flamegraph.min.js"></script>
 <script type="text/javascript">
-  {%- include "assets/flamegraph2.js" -%}
+  {%- include "assets/serve_flamegraph.js" -%}
 </script>
 {% endblock %}
 
